# Timetable-ELTE-IK

./: .gitignore  Cargo.toml  LICENSE  Órarend-20210901.ics
.github/workflows/: rust.yml
src/: build.rs  calendar.rs  course.rs  main.rs
src/gui/: build.rs  main.60
