[package]
name = "elte_ik_timetable"
version = "0.1.0"
authors = ["Balázs Zoltán <balazszoltan@student.elte.hu>"]
edition = "2018"
resolver = "2"
build = "src/gui/build.rs"

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
ics = "0.5.7"
reqwest = "0.11.4"
# sixtyfps = "0.1.1"
table-extract = "0.2.2"
tokio = { version = "1.10.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
# sixtyfps-build = "0.1.1"

[[bin]]
path = "src/main.rs"
name = "elte_ik_timetable"
